kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docscope
  labels:
    name: docscope
    app: docscope
